# minisql

./: .gitignore  Cargo.toml  README.md  capture_mysql_packets.py
src/: error.rs  join.rs  lexer.rs  lib.rs  main.rs  storage.rs  types.rs
src/engines/: handler.rs  mod.rs
src/executor/: aggregation.rs  ddl.rs  dml.rs  evaluator.rs  mod.rs  query.rs  schema.rs  transaction.rs
src/parser/: ast.rs  clauses.rs  ddl.rs  dml.rs  expressions.rs  mod.rs  other.rs  select.rs  tests.rs  utils.rs
src/protocol/: commands.rs  constants.rs  handshake.rs  mod.rs  packet.rs  prepared.rs  resultset.rs
tests/: alter_engine_tests.rs  arithmetic_tests.rs  composite_index_tests.rs  engine_routing_tests.rs  in_operator_tests.rs  multi_join_tests.rs  ordering_tests.rs  performance_tests.rs  php_integration.rs  primary_key_tests.rs  sandstone_tests.rs  vacuum_tests.rs  where_operator_tests.rs
tests/php_tests/: check_php_native_types.php  run_tests.php  test_codeigniter_batch.php  test_codeigniter_fix.php  test_codeigniter_pattern.php  test_codeigniter_simulation.php  test_column_not_found.php  test_default_behavior.php  test_existing_tables.php  test_from_edge_cases.php  test_last_insert_id.php  test_metadata.php  test_metadata_debug.php  test_multiple_wheres_whereins.php  test_mysqli_defaults.php  test_mysqli_native.php  test_numeric_types.php  test_ok_packet_details.php  test_php.php  test_prep_vs_regular.php  test_prepared_binary.php  test_prepared_statements.php  test_qualified_star.php  test_query_formats.php  test_select_star.php  test_simple_select.php  test_table_not_found.php  (+2 more)
(+14 files in other folders)
